--- a/brands.html
+++ b/brands.html
@@ -3,208 +3,68 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Brands - Spare Parts Suppliers</title>
+  <title>Spare Parts Suppliers - Connect. Quote. Supply.</title>
+  <link rel="icon" type="image/x-icon" href="/img/logo.png">
+  <link rel="stylesheet" href="assets/css/global.css">
   <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" rel="stylesheet">
-  <style>
-    * {
-      margin: 0;
-      padding: 0;
-      box-sizing: border-box;
-    }
-
-    body {
-      font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-      background: #f7fafc;
-      color: #1a202c;
-    }
-
-    .btn-primary {
-            background: #f81927;
-            color: white;
-        }
-
-        .btn-primary:hover {
-            background: #c53030;
-            transform: translateY(-2px);
-        }
-
-    header {
-      background: #fff;
-      box-shadow: 0 2px 10px rgba(0,0,0,0.1);
-      position: fixed;
-      width: 100%;
-      top: 0;
-      z-index: 1000;
-    }
-
-    nav {
-      max-width: 1200px;
-      margin: 0 auto;
-      display: flex;
-      justify-content: space-between;
-      align-items: center;
-      padding: 1rem 2rem;
-    }
-
-    .logo img {
-      height: 40px;
-    }
-
-    .nav-links {
-      display: flex;
-      list-style: none;
-      gap: 2rem;
-      align-items: center;
-    }
-
-    .nav-links a {
-      text-decoration: none;
-      color: #333;
-      font-weight: 500;
-      transition: color 0.3s;
-    }
-
-    .nav-links a:hover {
-      color: #e53e3e;
-    }
-
-    main {
-      max-width: 1200px;
-      margin: 120px auto 60px;
-      padding: 0 20px;
-    }
-
-    h1 {
-      text-align: center;
-      font-size: 2.2rem;
-      font-weight: 700;
-      margin-bottom: 2.5rem;
-      color: #1a202c;
-    }
-
-    .brand-grid {
-      display: grid;
-      grid-template-columns: repeat(auto-fit, minmax(220px, 1fr));
-      gap: 2rem;
-    }
-
-    .brand-card {
-      background: #fff;
-      border-radius: 16px;
-      box-shadow: 0 4px 12px rgba(0,0,0,0.06);
-      text-align: center;
-      padding: 2rem 1rem;
-      transition: all 0.3s ease;
-      cursor: pointer;
-    }
-
-    .brand-card:hover {
-      transform: translateY(-6px);
-      box-shadow: 0 6px 20px rgba(0,0,0,0.1);
-    }
-
-    .brand-logo {
-      width: 100px;
-      height: 100px;
-      object-fit: contain;
-      margin-bottom: 1rem;
-      transition: transform 0.3s;
-    }
-
-    .brand-card:hover .brand-logo {
-      transform: scale(1.05);
-    }
-
-    .brand-name {
-      font-size: 1.2rem;
-      font-weight: 700;
-      margin-bottom: 0.4rem;
-    }
-
-    .brand-count {
-      color: #e53e3e;
-      font-weight: 600;
-      font-size: 0.95rem;
-    }
-
-    @media (max-width: 768px) {
-      nav {
-        flex-direction: column;
-        gap: 1rem;
-      }
-
-      .brand-grid {
-        grid-template-columns: repeat(auto-fit, minmax(160px, 1fr));
-        gap: 1.5rem;
-      }
-
-      .brand-card {
-        padding: 1.5rem;
-      }
-    }
-  </style>
+  <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script>
 </head>
 <body>
- <header>
-        <nav class="container">
-            <a href="#" class="logo">
-                <img src="assets/img/logo.png" alt="">
-            </a>
-            <ul class="nav-links">
-                <li><a href="search.html">Search Parts</a></li>
-                <li><a href="#how-it-works">How it Works</a></li>
-                <li><a href="#suppliers">Brands</a></li>
-                <li><a href="#faq">FAQ</a></li>
-            </ul>
-            <div class="cta-buttons">
-                <!-- <a href="#login" class="btn btn-outline">Sign In</a> -->
-                <a href="#register" class="btn btn-primary">Become a Supplier</a>
-            </div>
-            <button class="mobile-menu">
-                <i class="fas fa-bars"></i>
-            </button>
-        </nav>
-    </header>
-
-  <main>
-    <h1>Popular Brands</h1>
-    <div class="brand-grid">
-      <div class="brand-card">
-        <img src="assets/img/brands/bmw.png" alt="BMW" class="brand-logo">
-        <div class="brand-name">BMW</div>
-        <div class="brand-count">1,240 parts</div>
+  <header>
+   <nav class="container">
+      <a href="index.html" class="logo"><img src="assets/img/logo.png" alt=""></a>
+      <ul class="nav-links">
+        <li><a href="index.html">Home</a></li>
+        <li><a href="index.html#how-it-works">How it Works</a></li>
+        <li><a href="search.html">Search Parts</a></li>
+        <li><a href="brands.html">Brands</a></li>
+        <li><a href="faq.html">FAQ</a></li>
+      </ul>
+      <div class="cta-buttons">
+        <a href="#register" class="btn btn-primary">Become a Supplier</a>
       </div>
+      <button class="mobile-menu"><i class="fas fa-bars"></i></button>
+    </nav>
+  </header>
 
-      <div class="brand-card">
-        <img src="assets/img/brands/mercedes.png" alt="Mercedes-Benz" class="brand-logo">
-        <div class="brand-name">Mercedes-Benz</div>
-        <div class="brand-count">980 parts</div>
-      </div>
+  <div class="mobile-nav">
+    <a href="index.html">Home</a>
+    <a href="index.html#how-it-works">How it Works</a>
+    <a href="search.html">Search Parts</a>
+    <a href="brands.html">Brands</a>
+    <a href="faq.html">FAQ</a>
+    <a href="#register" class="btn btn-primary">Become a Supplier</a>
+  </div>
+  <div class="mobile-overlay"></div>
 
-      <div class="brand-card">
-        <img src="assets/img/brands/audi.png" alt="Audi" class="brand-logo">
-        <div class="brand-name">Audi</div>
-        <div class="brand-count">760 parts</div>
-      </div>
-
-      <div class="brand-card">
-        <img src="assets/img/brands/toyota.png" alt="Toyota" class="brand-logo">
-        <div class="brand-name">Toyota</div>
-        <div class="brand-count">1,530 parts</div>
-      </div>
-
-      <div class="brand-card">
-        <img src="assets/img/brands/volkswagen.png" alt="Volkswagen" class="brand-logo">
-        <div class="brand-name">Volkswagen</div>
-        <div class="brand-count">870 parts</div>
-      </div>
-
-      <div class="brand-card">
-        <img src="assets/img/brands/honda.png" alt="Honda" class="brand-logo">
-        <div class="brand-name">Honda</div>
-        <div class="brand-count">620 parts</div>
+  <main style="padding-top:100px">
+    <div class="container text-center">
+      <h1>Popular Brands</h1>
+      <div class="grid" style="grid-template-columns: repeat(auto-fit, minmax(220px, 1fr)); margin-top:2rem;">
+        <div class="card text-center">
+          <img src="assets/img/brands/bmw.png" alt="BMW" style="width:100px; margin-bottom:1rem;">
+          <div class="brand-name" style="font-weight:700;">BMW</div>
+          <div class="text-primary">1,240 parts</div>
+        </div>
+        <div class="card text-center">
+          <img src="assets/img/brands/mercedes.png" alt="Mercedes" style="width:100px; margin-bottom:1rem;">
+          <div class="brand-name" style="font-weight:700;">Mercedes-Benz</div>
+          <div class="text-primary">980 parts</div>
+        </div>
+        <div class="card text-center">
+          <img src="assets/img/brands/audi.png" alt="Audi" style="width:100px; margin-bottom:1rem;">
+          <div class="brand-name" style="font-weight:700;">Audi</div>
+          <div class="text-primary">760 parts</div>
+        </div>
+        <div class="card text-center">
+          <img src="assets/img/brands/toyota.png" alt="Toyota" style="width:100px; margin-bottom:1rem;">
+          <div class="brand-name" style="font-weight:700;">Toyota</div>
+          <div class="text-primary">1,530 parts</div>
+        </div>
       </div>
     </div>
   </main>
+
+  <script src="assets/js/global.js"></script>
 </body>
 </html>
