--- a/faq.html
+++ b/faq.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Spare Parts Suppliers - Connect. Quote. Supply.</title>
-  <link rel="icon" type="image/x-icon" href="assets/img/logo.png">
+  <link rel="icon" type="image/x-icon" href="assets/img/favicon.png">
   <link rel="stylesheet" href="assets/css/global.css">
   <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" rel="stylesheet">
   <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script>
@@ -17,12 +17,19 @@
       <ul class="nav-links">
         <li><a href="index.html">Home</a></li>
         <li><a href="index.html#how-it-works">How it Works</a></li>
-        <li><a href="search.html">Search Parts</a></li>
+        <li><a href="search.html" class="btn btn-primary">Search Parts</a></li>
         <li><a href="brands.html">Brands</a></li>
         <li><a href="faq.html">FAQ</a></li>
       </ul>
       <div class="cta-buttons">
-        <a href="#register" class="btn btn-primary">Become a Supplier</a>
+       <a href="javascript:void(0)" 
+   class="btn btn-primary"
+   onclick="openLeadPopup(); setTimeout(() => chooseUserType('supplier'), 200);">
+   Become a Supplier
+</a>
+
+
+
       </div>
       <button class="mobile-menu"><i class="fas fa-bars"></i></button>
     </nav>
@@ -31,10 +38,10 @@
   <div class="mobile-nav">
     <a href="index.html">Home</a>
     <a href="index.html#how-it-works">How it Works</a>
-    <a href="search.html">Search Parts</a>
+    <a href="search.html" class="btn btn-primary">Search Parts</a>
     <a href="brands.html">Brands</a>
     <a href="faq.html">FAQ</a>
-    <a href="#register" class="btn btn-primary">Become a Supplier</a>
+      
   </div>
   <div class="mobile-overlay"></div>
 
