--- a/brands.html
+++ b/brands.html
@@ -4,24 +4,32 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Spare Parts Suppliers - Connect. Quote. Supply.</title>
-  <link rel="icon" type="image/x-icon" href="/img/logo.png">
+  <link rel="icon" type="image/x-icon" href="assets/img/favicon.png">
   <link rel="stylesheet" href="assets/css/global.css">
   <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" rel="stylesheet">
   <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script>
 </head>
 <body>
+  <!-- HEADER -->
   <header>
-   <nav class="container">
+    <nav class="container">
       <a href="index.html" class="logo"><img src="assets/img/logo.png" alt=""></a>
       <ul class="nav-links">
         <li><a href="index.html">Home</a></li>
         <li><a href="index.html#how-it-works">How it Works</a></li>
-        <li><a href="search.html">Search Parts</a></li>
+        <li><a href="search.html" class="btn btn-primary">Search Parts</a></li>
         <li><a href="brands.html">Brands</a></li>
         <li><a href="faq.html">FAQ</a></li>
       </ul>
       <div class="cta-buttons">
-        <a href="#register" class="btn btn-primary">Become a Supplier</a>
+       <a href="javascript:void(0)" 
+   class="btn btn-primary"
+   onclick="openLeadPopup(); setTimeout(() => chooseUserType('supplier'), 200);">
+   Become a Supplier
+</a>
+
+
+
       </div>
       <button class="mobile-menu"><i class="fas fa-bars"></i></button>
     </nav>
@@ -30,13 +38,12 @@
   <div class="mobile-nav">
     <a href="index.html">Home</a>
     <a href="index.html#how-it-works">How it Works</a>
-    <a href="search.html">Search Parts</a>
+    <a href="search.html" class="btn btn-primary">Search Parts</a>
     <a href="brands.html">Brands</a>
     <a href="faq.html">FAQ</a>
-    <a href="#register" class="btn btn-primary">Become a Supplier</a>
+      
   </div>
   <div class="mobile-overlay"></div>
-
   <main style="padding-top:100px">
     <div class="container text-center">
       <h1>Popular Brands</h1>
